# STReamGT

./: .env.example  .gitignore  Dockerfile  Dockerfile.python  README.md  input copy.tsv  input.tsv  main.nf  matching.excalidraw  obi4.nf  web.excalidraw  workflow.excalidraw
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0003_studies_kits_drop_code.py  0004_animal_overrides.py  0005_kit_updated_at.py  0006_controls.py  0007_kit_reads.py  0008_kit_claim.py  3092300d6a45_baseline.py  8e21237a1d0b_projects_and_matching.py
backend/app/: bootstrap.py  config.py  db.py  dbbackup.py  dbupgrade.py  main.py  seed_catalog.py  seed_demo.py
backend/app/api/: auth.py  consensus.py  control_templates.py  jobs.py  kits.py  matching.py  panels.py  porting.py  projects.py  samples.py  users.py
backend/app/auth/: access.py  deps.py  security.py
backend/app/models/: __init__.py  consensus.py  (+7 more)
backend/seed_data/: tags.csv
backend/tests/: conftest.py  test_animal_view.py  test_consensus_core.py  test_consensus_service.py  test_delete_pop_study.py  test_delete_project.py  test_dispatch.py  test_jobs_api.py  test_kit_files.py  test_kits_api.py  test_matching.py  test_matching_pairwise.py  test_matching_qc.py  test_panels_users.py  test_password_reset.py  test_pipeline_run.py  test_plot_data.py  test_porting.py  test_projects_ingestion.py  test_qc.py  test_ratelimit.py  test_sample_detail.py  test_sample_reassign.py  test_samplesheet.py  test_smoke_auth.py  test_storage.py  test_study_kits.py  test_supergroups.py
(+128 files in other folders)
