[project]
name = "streamgt-backend"
version = "0.1.0"
description = "STReamGT web platform backend (FastAPI + Celery)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",   # JWT
    "bcrypt>=4.1",                       # password hashing
    "python-multipart>=0.0.9",          # form/file uploads
    "celery[redis]>=5.3",
    "redis>=5.0",
    "boto3>=1.34",                       # S3
    "email-validator>=2.1",
    "jinja2>=3.1",                       # email templates
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "moto[s3]>=5.0",                     # mock S3 in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
